WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152976
Modern IDB: storage/indexeddb/lazy-index-population.html fails
https://bugs.webkit.org/show_bug.cgi?id=152976
Summary
Modern IDB: storage/indexeddb/lazy-index-population.html fails
Brady Eidson
Reported
2016-01-11 09:47:50 PST
Modern IDB: storage/indexeddb/lazy-index-population.html fails At transaction abort, we were managing the object stores changed during the transaction in the wrong order.
Attachments
Patch v1
(4.10 KB, patch)
2016-01-11 10:02 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch v1
(4.13 KB, patch)
2016-01-11 10:08 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-11 10:02:51 PST
Created
attachment 268692
[details]
Patch v1
WebKit Commit Bot
Comment 2
2016-01-11 10:05:12 PST
Attachment 268692
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3
2016-01-11 10:08:42 PST
Created
attachment 268694
[details]
Patch v1
WebKit Commit Bot
Comment 4
2016-01-11 12:18:46 PST
Comment on
attachment 268694
[details]
Patch v1 Clearing flags on attachment: 268694 Committed
r194859
: <
http://trac.webkit.org/changeset/194859
>
WebKit Commit Bot
Comment 5
2016-01-11 12:18:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug